# datahub-ai-text2sql-agent

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: __init__.py  routes.py  storage.py
backend/app/datasources/: __init__.py  base.py  manager.py  postgresql.py
backend/app/llm/: __init__.py  client.py  executor.py  orchestrator.py  prompts.py  schemas.py
backend/knowledge/: datasources.yaml
backend/knowledge/data_schemas/: accounts_db.yaml  compliance_db.yaml  customer_db.yaml  employees_db.yaml  insurance_db.yaml  knowledge.md  loans_db.yaml  summary.yaml
backend/knowledge/docs/: datasources.md
backend/knowledge/prompts/: analyze_error.yaml  create_plan.yaml  decide_action.yaml  generate_sql.yaml  validate_question.yaml  write_summary.yaml
docs/: INDEX.md  README.md  SUMMARY.md
docs/architecture/: DATASOURCE_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md
docs/guides/: GETTING_STARTED.md
docs/implementation/: AGENTIC_EXECUTION.md  DATABASE_NAMING_FIX.md  DATABASE_USAGE_TRACKING.md  FRONTEND_DATABASE_HIGHLIGHTING.md  SCHEMA_AND_OPTIMIZATION.md  VALIDATION_AND_DEBUG_FIX.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  DataSourceBadges.tsx  DebugPanel.tsx  ThreadList.tsx  TokenDisplay.tsx
